--- a/Resources/Prototypes/Roles/Antags/nukeops.yml
+++ b/Resources/Prototypes/Roles/Antags/nukeops.yml
@@ -2,19 +2,22 @@
   id: Nukeops
   name: roles-antag-nuclear-operative-name
   antagonist: true
-  setPreference: true
+  setPreference: false
   objective: roles-antag-nuclear-operative-objective
+  description: roles-antag-nuclear-operative-description
 
 - type: antag
   id: NukeopsMedic
   name: roles-antag-nuclear-operative-agent-name
   antagonist: true
-  setPreference: true
+  setPreference: false
   objective: roles-antag-nuclear-operative-agent-objective
+  description: roles-antag-nuclear-operative-agent-description
 
 - type: antag
   id: NukeopsCommander
   name: roles-antag-nuclear-operative-commander-name
   antagonist: true
-  setPreference: true
+  setPreference: false
   objective: roles-antag-nuclear-operative-commander-objective
+  description: roles-antag-nuclear-operative-commander-description
