--- a/Resources/Prototypes/Roles/Antags/zombie.yml
+++ b/Resources/Prototypes/Roles/Antags/zombie.yml
@@ -4,6 +4,7 @@
   antagonist: true
   setPreference: true
   objective: roles-antag-initial-infected-objective
+  description: roles-antag-initial-infected-description
 
 - type: antag
   id: Zombie
